--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
               <p class="lead">APASIONADOS POR LAS BICIS DESDE LOS 80'S. 
                   FUNDADOS EN 2015 FIXBIKE, NUESTRO OBJETIVO ES BRINDAR UNA ATENCION INTEGRAL AL CICLISTA.</p>
               <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">CONTACTANOS
-                  <a href="./paginas/contacto.html"></a>
-                </button>
+                <a href="./paginas/contacto.html" class="btn btn-lg px-4 me-md-2">CONTACTANOS!</a>
               </div>
             </div>
           </div>
