--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -70,7 +70,7 @@
                 <div class="product-details">
                     <span class="product-catagory">Enduro,cascos</span>
                     <h4><a href="./productos.html">Casco Smith Enduro</a></h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, possimus nostrum!</p>
+                    <p>Uno de los mejores cascos desarrollados por Smith, destacando su peso y resistencia.</p>
                     <div class="product-bottom-details">
                         <div class="product-price"><small>$120.000</small>$98.000</div>
                         <div class="product-links">
@@ -88,7 +88,7 @@
                 <div class="product-details">
                     <span class="product-catagory">Mtb,pedales</span>
                     <h4><a href="./productos.html">Pedales Rideland </a></h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, possimus nostrum!</p>
+                    <p>Con sus pines de 3mm te daran el mejor agarre.</p>
                     <div class="product-bottom-details">
                         <div class="product-price"><small>$35.000</small>$30.000</div>
                         <div class="product-links">
@@ -106,7 +106,7 @@
                 <div class="product-details">
                     <span class="product-catagory">Mtb,transmisión</span>
                     <h4><a href="./productos.html">Piñon Shimano 11/52 12s </a></h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, possimus nostrum!</p>
+                    <p>El mejor piñon precio/calidad que encontraras</p>
                     <div class="product-bottom-details">
                         <div class="product-price"><small>$78.000</small>$63.000</div>
                         <div class="product-links">
@@ -124,7 +124,7 @@
                 <div class="product-details">
                     <span class="product-catagory">Mtb,cadenas</span>
                     <h4><a href="./productos.html">Cadena Shimano 12s </a></h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, possimus nostrum!</p>
+                    <p>Cadena resistente para todo tipo de climas</p>
                     <div class="product-bottom-details">
                         <div class="product-price"><small>$30.000</small>$25.000</div>
                         <div class="product-links">
@@ -142,7 +142,7 @@
                 <div class="product-details">
                     <span class="product-catagory">Indumentaria,guantes</span>
                     <h4><a href="./productos.html">Guantes Verdes</a></h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, possimus nostrum!</p>
+                    <p>Guantes para el verano, frescos con buena ventilación y gran agarre.</p>
                     <div class="product-bottom-details">
                         <div class="product-price">$15.000</div>
                         <div class="product-links">
@@ -160,7 +160,7 @@
                 <div class="product-details">
                     <span class="product-catagory">Mtb,ruedas</span>
                     <h4><a href="./productos.html">Maza Hydra Violeta </a></h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, possimus nostrum!</p>
+                    <p>Con la nueva tecnologia de las mazas Industry rodaras a toda velocidad.</p>
                     <div class="product-bottom-details">
                         <div class="product-price">$75.000</div>
                         <div class="product-links">
@@ -178,7 +178,7 @@
                 <div class="product-details">
                     <span class="product-catagory">Mtb,componentes</span>
                     <h4><a href="./productos.html">Tee Alpha negra </a></h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, possimus nostrum!</p>
+                    <p>Te alpha de 38mm para disciplinas de enduro y dh.</p>
                     <div class="product-bottom-details">
                         <div class="product-price">$29.000</div>
                         <div class="product-links">
@@ -196,7 +196,7 @@
                 <div class="product-details">
                     <span class="product-catagory">Mtb,Indumentaria</span>
                     <h4><a href="./productos.html">Zapatillas Fijación Ride Concept </a></h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, possimus nostrum!</p>
+                    <p>Ride Concept y sus nuevas modelos Hellcat, nos dara la mejor seguridad.</p>
                     <div class="product-bottom-details">
                         <div class="product-price">$95.000</div>
                         <div class="product-links">
